[tool.poetry]
name = "api-tests"
version = "0.1.0"
description = ""
authors = ["Matt Millar <matt.millar@updraft.com>"]
license = "Apache License"
readme = "README.md"
packages = [{include = "api_tests"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
backoff = "^2.1.2"
click = "^8.1.3"
pytest = "^7.1.3"
pytz = "^2022.2.1"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
